remove script tags that cause notebooklm ingestion issues

--- a/cwe_json.ipynb
+++ b/cwe_json.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
        "[130 rows x 1 columns]"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 197,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
@@ -283,13 +283,18 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Extract the ObservedExamples to a file\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +438,7 @@
        "[2982 rows x 3 columns]"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 200,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
@@ -5489,7 +5494,7 @@
        " ...]"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 201,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5505,7 +5510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5532,7 +5537,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 204,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Remove scripts tags\n",
+    "\n",
+    "#The following cause ingested json or md files to be truncated without warning/error by NotebookLM - so replace with 'script' \n",
+    "#- \\\"<script>\\\"\n",
+    "#- \"<script>\"\n",
+    "#- <script>\n",
+    "#'<SCRIPT SRC=\"http://other.domain.here\">' \n",
+    "\n",
+    "#The following cause ingested json or md files to be truncated without warning/error by NotebookLM - so replace with 'style' \n",
+    "#- <style>\n",
+    " \n",
+    "#md files \n",
+    "#1 a simple XSS protection mechanism might try to validate that an input has no \"<script>\" tags \n",
+    "#1 CVE-2004-2351: Resultant XSS when only <script> and <style> are checked.\n",
+    "#6 \"CVE-2007-5727: Denylist only removes <SCRIPT> tag.\"\n",
+    "#8 For example, Javascript-based web widgets may be inserted by using '<SCRIPT SRC=\"http://other.domain.here\">' \n",
+    "\n",
+    "def sanitize_script_tags(data):\n",
+    "    \"\"\"\n",
+    "    Recursively sanitizes script and style tags from string values in JSON data,\n",
+    "    replacing them with the words 'script' and 'style' respectively.\n",
+    "    Handles nested dictionaries, lists, and various data types.\n",
+    "    \n",
+    "    Args:\n",
+    "        data: The data to sanitize (can be dict, list, str, or other types)\n",
+    "        \n",
+    "    Returns:\n",
+    "        The sanitized data with the same structure as input\n",
+    "    \"\"\"\n",
+    "    import re\n",
+    "    \n",
+    "    def sanitize_string(text: str) -> str:\n",
+    "        \"\"\"Helper function to sanitize a single string\"\"\"\n",
+    "        # Patterns for both script and style tags\n",
+    "        patterns = {\n",
+    "            'script': [\n",
+    "                r'\\\"<script[^>]*>\\\"',  # Double quoted script tags\n",
+    "                r'\"<script[^>]*>\"',    # Double quoted without escaping\n",
+    "                r'<script[^>]*>',      # Unquoted script tags\n",
+    "                r'\\'<script[^>]*>\\'',  # Single quoted script tags\n",
+    "            ],\n",
+    "            'style': [\n",
+    "                r'\\\"<style[^>]*>\\\"',   # Double quoted style tags\n",
+    "                r'\"<style[^>]*>\"',     # Double quoted without escaping\n",
+    "                r'<style[^>]*>',       # Unquoted style tags\n",
+    "                r'\\'<style[^>]*>\\'',   # Single quoted style tags\n",
+    "            ]\n",
+    "        }\n",
+    "        \n",
+    "        result = text\n",
+    "        # Replace script tags with 'script'\n",
+    "        script_pattern = '|'.join(patterns['script'])\n",
+    "        result = re.sub(script_pattern, 'script', result, flags=re.IGNORECASE)\n",
+    "        \n",
+    "        # Replace style tags with 'style'\n",
+    "        style_pattern = '|'.join(patterns['style'])\n",
+    "        result = re.sub(style_pattern, 'style', result, flags=re.IGNORECASE)\n",
+    "        \n",
+    "        return result\n",
+    "    \n",
+    "    # Handle different data types\n",
+    "    if isinstance(data, dict):\n",
+    "        return {key: sanitize_script_tags(value) for key, value in data.items()}\n",
+    "    elif isinstance(data, list):\n",
+    "        return [sanitize_script_tags(item) for item in data]\n",
+    "    elif isinstance(data, str):\n",
+    "        return sanitize_string(data)\n",
+    "    else:\n",
+    "        # Return unchanged for other types (int, float, bool, None, etc.)\n",
+    "        return data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "json_data = sanitize_script_tags(json_data)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5543,7 +5635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5562,7 +5654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5589,7 +5681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [
     {
@@ -5624,7 +5716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5744,7 +5836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [],
    "source": [
